--- a/package.json
+++ b/package.json
@@ -1,39 +1,46 @@
 {
     "name": "notes-web",
-    "description": "Tips & Tricks for Web Development",
-    "engines": {
-        "node": ">=15.0.0"
-    },
+    "version": "0.0.0",
     "private": true,
     "scripts": {
-        "build": "qwik build",
-        "build.client": "vite build",
-        "build.preview": "vite build --ssr src/entry.preview.tsx",
-        "build.types": "tsc --incremental --noEmit",
-        "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
-        "dev": "vite --mode ssr",
-        "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-        "fmt": "prettier --write .",
-        "fmt.check": "prettier --check .",
-        "lint": "eslint \"src/**/*.ts*\"",
-        "preview": "qwik build preview && vite preview --open",
-        "start": "vite --open --mode ssr",
-        "qwik": "qwik"
+        "docusaurus": "docusaurus",
+        "start": "docusaurus start",
+        "build": "docusaurus build",
+        "swizzle": "docusaurus swizzle",
+        "deploy": "docusaurus deploy",
+        "clear": "docusaurus clear",
+        "serve": "docusaurus serve",
+        "write-translations": "docusaurus write-translations",
+        "write-heading-ids": "docusaurus write-heading-ids",
+        "typecheck": "tsc"
+    },
+    "dependencies": {
+        "@docusaurus/core": "2.4.1",
+        "@docusaurus/preset-classic": "2.4.1",
+        "@mdx-js/react": "^1.6.22",
+        "clsx": "^1.2.1",
+        "prism-react-renderer": "^1.3.5",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
     },
     "devDependencies": {
-        "@builder.io/qwik": "^1.1.4",
-        "@builder.io/qwik-city": "^1.1.4",
-        "@types/eslint": "8.37.0",
-        "@types/node": "^20.1.4",
-        "@typescript-eslint/eslint-plugin": "5.59.5",
-        "@typescript-eslint/parser": "5.59.5",
-        "eslint": "8.40.0",
-        "eslint-plugin-qwik": "^1.1.4",
-        "prettier": "2.8.8",
-        "sass": "^1.62.1",
-        "typescript": "5.0.4",
-        "undici": "5.22.1",
-        "vite": "4.3.5",
-        "vite-tsconfig-paths": "4.2.0"
+        "@docusaurus/module-type-aliases": "2.4.1",
+        "@tsconfig/docusaurus": "^1.0.5",
+        "typescript": "^4.7.4"
+    },
+    "browserslist": {
+        "production": [
+            ">0.5%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "engines": {
+        "node": ">=16.14"
     }
 }
