--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,7 @@
 {
+    // This file is not used in compilation. It is here just for a nice editor experience.
+    "extends": "@tsconfig/docusaurus/tsconfig.json",
     "compilerOptions": {
-        "allowJs": true,
-        "target": "ES2017",
-        "module": "ES2022",
-        "lib": ["es2022", "DOM", "WebWorker", "DOM.Iterable"],
-        "jsx": "react-jsx",
-        "jsxImportSource": "@builder.io/qwik",
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true,
-        "moduleResolution": "node",
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "incremental": true,
-        "isolatedModules": true,
-        "outDir": "tmp",
-        "noEmit": true,
-        "types": ["node", "vite/client"],
-        "paths": {
-            "~/*": ["./src/*"]
-        }
-    },
-    "files": ["./.eslintrc.cjs"],
-    "include": ["src", "./*.d.ts"]
+        "baseUrl": "."
+    }
 }
