--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,6 @@ jobs:
 
             - name: Move Built Files to Corresponding Folder
               run: |
-                  rm -rf /var/www/notes.bijanprogrammer.com/html/web
-                  mkdir -p /var/www/notes.bijanprogrammer.com/html/web
-                  mv build/* /var/www/notes.bijanprogrammer.com/html/web
+                  rm -rf /var/www/notes.bijanprogrammer.com/html/web/
+                  mkdir -p /var/www/notes.bijanprogrammer.com/html/web/
+                  mv build/* /var/www/notes.bijanprogrammer.com/html/web/
