--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,20 +5,7 @@ on:
 
 jobs:
     deploy:
-        name: Deploy
-        runs-on: self-hosted
-
-        steps:
-            - uses: actions/checkout@v3
-
-            - name: Install Dependencies
-              run: npm i
-
-            - name: Build
-              run: npm run build
-
-            - name: Move Built Files to Corresponding Folder
-              run: |
-                  rm -rf /var/www/notes.bijanprogrammer.com/html/web/
-                  mkdir -p /var/www/notes.bijanprogrammer.com/html/web/
-                  mv build/* /var/www/notes.bijanprogrammer.com/html/web/
+        uses: BijanProgrammerWebsites/hub/.github/workflows/deploy-docusaurus.yml@master
+        with:
+            host: notes.bijanprogrammer.com
+            base-href: /web/
