--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "notes-web",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
         "docusaurus": "docusaurus",
@@ -15,18 +15,20 @@
         "typecheck": "tsc"
     },
     "dependencies": {
-        "@docusaurus/core": "2.4.1",
-        "@docusaurus/preset-classic": "2.4.1",
-        "@mdx-js/react": "^1.6.22",
-        "clsx": "^1.2.1",
-        "prism-react-renderer": "^1.3.5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "@docusaurus/core": "^3.1.0",
+        "@docusaurus/preset-classic": "^3.1.0",
+        "@mdx-js/react": "^3.0.0",
+        "clsx": "^2.1.0",
+        "prism-react-renderer": "^2.3.1",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
     },
     "devDependencies": {
-        "@docusaurus/module-type-aliases": "2.4.1",
-        "@tsconfig/docusaurus": "^1.0.5",
-        "typescript": "^4.7.4"
+        "@docusaurus/module-type-aliases": "^3.1.0",
+        "@docusaurus/tsconfig": "^3.1.0",
+        "@docusaurus/types": "^3.1.0",
+        "prettier": "^3.1.1",
+        "typescript": "^5.3.3"
     },
     "browserslist": {
         "production": [
@@ -41,6 +43,6 @@
         ]
     },
     "engines": {
-        "node": ">=16.14"
+        "node": ">=18.0"
     }
 }
